# Automated-E-commerce

./: .env.example  .gitignore  CLAUDE.md  README.md  tmp_topic_06.docx  tmp_topic_08.docx
services/ai-orchestrator/: .env.example  .gitignore  pyproject.toml
services/ai-orchestrator/src/: config.py  main.py
services/ai-orchestrator/src/activities/: __init__.py  analyze_fashion_assets.py  analyze_product.py  analyze_reference_video.py  build_render_manifest.py  callback_java.py  check_asset_quality.py  classify_feedback.py  fake_generate_keyframes.py  fake_generate_video_clips.py  generate_asset_prompts.py  generate_fashion_plans.py  generate_fashion_storyboard.py  generate_image_assets.py  generate_keyframe_prompts.py  generate_script.py  generate_storyboard.py  generate_video_clip_prompts.py  generate_video_clips.py  generate_video_plans.py  plan_repair.py
services/ai-orchestrator/src/api/: asset_images.py  health.py  workflows.py
services/ai-orchestrator/src/providers/: __init__.py  base.py  factory.py  fake_image.py  openai_image.py  volcengine_image.py  volcengine_video.py
services/ai-orchestrator/src/schemas/: ai_outputs.py  render_manifest.py  workflow_requests.py
services/ai-orchestrator/src/services/: callback_service.py  llm_service.py  validation_pipeline.py
services/ai-orchestrator/src/workflows/: __init__.py  fashion_analysis.py  fashion_keyframe.py  fashion_plan.py  fashion_repair.py  (+4 more)
services/ai-orchestrator/tests/: conftest.py  test_callback_payloads.py  test_fixtures.py  test_providers.py  test_schemas.py  test_workflows.py
(+331 files in other folders)
