[project]
name = "tk-ai-video-orchestrator"
version = "1.0.0"
description = "TikTok Shop AI Video — Python FastAPI + Temporal AI Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "temporalio>=1.7.0",
    "httpx>=0.27.2",
    "openai>=1.46.0",
    "anthropic>=0.34.2",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
